[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/UI.gd" type="Script" id=1]
[ext_resource path="res://ui/UITheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Top" type="Control" parent="."]
anchor_right = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ItemName" type="Label" parent="Top/VBoxContainer"]
margin_right = 512.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Item Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondaryTopText" type="Label" parent="Top/VBoxContainer"]
margin_top = 23.0
margin_right = 512.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Secondary Text"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_bottom = -10.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bottom"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -76.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Bottom/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 508.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Bottom/MarginContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 83.0
rect_min_size = Vector2( 70, 68 )

[node name="Look" type="Button" parent="Bottom/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 1
size_flags_vertical = 4
enabled_focus_mode = 1
text = "Look"

[node name="Take" type="Button" parent="Bottom/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 70.0
margin_bottom = 54.0
focus_mode = 1
size_flags_vertical = 4
enabled_focus_mode = 1
text = "Take"

[node name="Use" type="Button" parent="Bottom/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 70.0
margin_bottom = 83.0
focus_mode = 1
size_flags_vertical = 4
enabled_focus_mode = 1
text = "Use"

[node name="VBoxContainer2" type="VBoxContainer" parent="Bottom/MarginContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 83.0
rect_min_size = Vector2( 70, 68 )

[node name="Give" type="Button" parent="Bottom/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 70.0
margin_bottom = 25.0
focus_mode = 1
size_flags_vertical = 4
enabled_focus_mode = 1
text = "Give"

[node name="Talk To" type="Button" parent="Bottom/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 29.0
margin_right = 70.0
margin_bottom = 54.0
focus_mode = 1
size_flags_vertical = 4
enabled_focus_mode = 1
text = "Talk"

[node name="Control" type="Control" parent="Bottom/MarginContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 83.0
rect_min_size = Vector2( 64, 68 )

[node name="Items" type="Panel" parent="Bottom/MarginContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 504.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Bottom/MarginContainer/HBoxContainer/Items"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bottom/MarginContainer/HBoxContainer/Items/ScrollContainer"]
margin_right = 288.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="Bottom/MarginContainer/HBoxContainer/Items/ScrollContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 75.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 7

[connection signal="pressed" from="Bottom/MarginContainer/HBoxContainer/VBoxContainer/Look" to="." method="_on_Look_pressed"]
[connection signal="pressed" from="Bottom/MarginContainer/HBoxContainer/VBoxContainer/Take" to="." method="_on_Take_pressed"]
[connection signal="pressed" from="Bottom/MarginContainer/HBoxContainer/VBoxContainer/Use" to="." method="_on_Use_pressed"]
